bindings/go/marketdata/marketdata_uniffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t data, int8_t poll_result);
void ffi_marketdata_uniffi_rust_future_free_u64(uint64_t handle
);
uint64_t ffi_marketdata_uniffi_rust_future_complete_u64(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_i64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_i64(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_i64(uint64_t handle
);
int64_t ffi_marketdata_uniffi_rust_future_complete_i64(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_f32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_f32(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_f32(uint64_t handle
);
float ffi_marketdata_uniffi_rust_future_complete_f32(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_f64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_f64(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_f64(uint64_t handle
);
double ffi_marketdata_uniffi_rust_future_complete_f64(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_pointer(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_pointer(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_pointer(uint64_t handle
);
void* ffi_marketdata_uniffi_rust_future_complete_pointer(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_marketdata_uniffi_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_void(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_void(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_complete_void(uint64_t handle, RustCallStatus *out_status
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_api_key(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_api_key_and_tls(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_bearer_token(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_bearer_token_and_tls(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_sdk_token(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_sdk_token_and_tls(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_websocket_client(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_websocket_client_with_config(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_websocket_client_with_endpoint(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptclient_historical(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptclient_intraday(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_candles_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_daily_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_get_candles(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_get_daily(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_candles_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_candles(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_products(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_quote(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_ticker(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_tickers(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_trades(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_volumes(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_products_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_quote_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_ticker_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_tickers_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_trades_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_volumes_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_restclient_base_url(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_restclient_futopt(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_restclient_stock(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockclient_base_url(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockclient_corporate_actions(void
    
);