bindings/csharp/MarketdataUniffi/marketdata_uniffi.cs


    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_free_u64(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ulong ffi_marketdata_uniffi_rust_future_complete_u64(
        IntPtr @handle,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_poll_i64(
        IntPtr @handle,
        IntPtr @callback,
        IntPtr @callbackData
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_cancel_i64(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_free_i64(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern long ffi_marketdata_uniffi_rust_future_complete_i64(
        IntPtr @handle,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_poll_f32(
        IntPtr @handle,
        IntPtr @callback,
        IntPtr @callbackData
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_cancel_f32(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_free_f32(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern float ffi_marketdata_uniffi_rust_future_complete_f32(
        IntPtr @handle,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_poll_f64(
        IntPtr @handle,
        IntPtr @callback,
        IntPtr @callbackData
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_cancel_f64(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_free_f64(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern double ffi_marketdata_uniffi_rust_future_complete_f64(
        IntPtr @handle,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_poll_pointer(
        IntPtr @handle,
        IntPtr @callback,
        IntPtr @callbackData
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_cancel_pointer(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_free_pointer(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr ffi_marketdata_uniffi_rust_future_complete_pointer(
        IntPtr @handle,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_poll_rust_buffer(
        IntPtr @handle,
        IntPtr @callback,
        IntPtr @callbackData
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_cancel_rust_buffer(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_free_rust_buffer(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer ffi_marketdata_uniffi_rust_future_complete_rust_buffer(
        IntPtr @handle,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_poll_void(
        IntPtr @handle,
        IntPtr @callback,
        IntPtr @callbackData
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_cancel_void(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_free_void(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_complete_void(
        IntPtr @handle,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_api_key();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_api_key_and_tls();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_bearer_token();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_bearer_token_and_tls();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_sdk_token();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_sdk_token_and_tls();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_func_new_websocket_client();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_func_new_websocket_client_with_config();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_func_new_websocket_client_with_endpoint();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptclient_historical();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptclient_intraday();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_candles_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_daily_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_get_candles();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_get_daily();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_candles_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_candles();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_products();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_quote();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_ticker();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_tickers();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_trades();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_volumes();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_products_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_quote_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_ticker_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_tickers_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_trades_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_volumes_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_restclient_base_url();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_restclient_futopt();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_restclient_stock();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockclient_base_url();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockclient_corporate_actions();
